--- a/assets/styles.css
+++ b/assets/styles.css
@@ -84,6 +84,9 @@ p {
   max-width: 320px;
   padding: 1.5rem;
   border-radius: 0.9rem;
+  margin: 1.5rem;
+  box-shadow: 0px 25px 5px 20px rgba(0, 0, 0, 0.08),
+    0px 25px 3px 50px rgba(0, 0, 0, 0.05);
 }
 
 .card-equilibrium {
